--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                     
                     <h3>2. Choose Your Table(s)</h3>
                     <div id="table-requirements" style="font-weight:bold; margin-bottom:10px;">Enter group size above to start.</div>
-                    <p id="vip-warning" class="error-text" style="display:none;">⚠️ VIP Table Selected. A one-time VIP Fee of $250 applies. ⚠️</p>
+                    <p id="capacity-warning" class="error-text" style="display:none; color:#ff7e5f;">⚠️ Warning: You have not selected enough tables to seat your party.</p>
+                    <p id="vip-warning" class="error-text" style="display:none; color:gold;">⚠️ VIP Table Selected. A one-time VIP Fee of $250 applies. ⚠️</p>
                 </div>
 
                 <div id="map-container" class="map-container">
