--- a/index.html
+++ b/index.html
@@ -240,6 +240,14 @@
                 </div>
                 <p style="margin-top:10px; font-size:0.9rem;">Click an ON HOLD table (Orange) to review the reservation.</p>
                 <div id="table-admin-actions"></div>
+                
+                <hr style="margin: 20px 0;">
+
+                <h3>Table Layout Configuration (Edit Position/Capacity)</h3>
+                <div id="table-config-editor">
+                    <p>Loading table configuration...</p>
+                </div>
+                <button onclick="saveTableConfiguration()" class="btn btn-accent" style="margin-top:10px;">Save Table Configuration</button>
             </div>
         </div>
     </div>
