changed event calender

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="bubble"></div><div class="bubble"></div><div class="bubble"></div>
     </div>
 
+    <div id="event-display-container" style="display: none;">
+        </div>
+
     <div class="main-wrapper">
         
-        <section id="event-display-container" class="interactive-element" style="display: none;">
-            </section>
-
         <header class="hero interactive-element">
             <img src="Marina-Square-Samdy-Shores-v1.png" alt="The Marina Logo" class="main-logo" onerror="this.style.display='none'; document.write('<h1 style=\'font-size:3rem;\'>The Marina</h1>')">
         </header>
